--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Hi+Melody&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f6f6f6;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: "Gowun Dodum";
+  height: 100vh;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+/* .App {
+  font-family: "Gowun Dodum", sans-serif;
+  font-family: "Hi Melody", cursive;
+} */
+
+#root {
+  height: 100%;
+  background-color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.App {
+  padding: 0 20px;
+}
+
+@media (min-width: 650px) {
+  .App {
+    width: 640px;
   }
 }
+
+@media (max-width: 650px) {
+  .App {
+    width: 90vw;
+  }
+}
+
+/* my button */
+
+.MyButton {
+  cursor: pointer;
+  border:none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-family: "Gowun Dodum";
+  white-space: nowrap;
+}
+
+.MyButton_default {
+  background-color: #ececec;
+  color:black
+}
+.MyButton_positive {
+  background-color: #64c964;
+  color:white
+}
+.MyButton_negative {
+  background-color: #fd565d;
+  color:white
+}
+
+header {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+header> div {
+  display: flex;
+}
+
+header .head_text {
+  width: 50%;
+  font-size: 25px;
+  justify-content: center;
+}
+
+
+
