--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ body {
 
 .MyButton {
   cursor: pointer;
-  border:none;
+  border: none;
   border-radius: 4px;
   padding: 10px 20px;
   font-size: 18px;
@@ -52,15 +52,15 @@ body {
 
 .MyButton_default {
   background-color: #ececec;
-  color:black
+  color: black;
 }
 .MyButton_positive {
   background-color: #64c964;
-  color:white
+  color: white;
 }
 .MyButton_negative {
   background-color: #fd565d;
-  color:white
+  color: white;
 }
 
 header {
@@ -71,7 +71,7 @@ header {
   border-bottom: 1px solid #e2e2e2;
 }
 
-header> div {
+header > div {
   display: flex;
 }
 
@@ -81,5 +81,87 @@ header .head_text {
   justify-content: center;
 }
 
+.DiaryList .menu_wrapper {
+  display: flex;
+  justify-content: space-between;
 
+  margin: 20px 0;
+}
 
+.DiaryList .menu_wrapper .right_col {
+  flex-grow: 1; /* 남은 영역을 전부 다 갖게 된다 */
+  /* width: 100%; */
+}
+
+.DiaryList .menu_wrapper .right_col button {
+  width: 100%;
+}
+
+.DiaryList .ControlMenu {
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  background-color: #ececec;
+  cursor: pointer;
+  font-family: "Gowun Dodum";
+  font-size: 18px;
+}
+
+.DiaryItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.DiaryItem > div:not(:last-child) {
+  margin-right: 20px;
+}
+
+.DiaryItem .emotion_img_wrapper {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+  height: 80px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.DiaryItem .emotion_img_wrapper_1 {
+  background-color: #64c964;
+}
+
+.DiaryItem .emotion_img_wrapper_2 {
+  background-color: #9dd772;
+}
+
+.DiaryItem .emotion_img_wrapper_3 {
+  background-color: #fdce17
+}
+
+.DiaryItem .emotion_img_wrapper_4 {
+  background-color: #fd8446;
+}
+
+.DiaryItem .emotion_img_wrapper_5 {
+  background-color: #fd565f;
+}
+
+.DiaryItem .emotion_img_wrapper img {
+  width: 60%;
+}
+
+.DiaryItem .info_wrapper {
+  flex-grow: 1;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.DiaryItem .diary_content_preview {
+  font-size: 18px;
+}
+
+.DiaryItem .btn_wrapper {
+  min-width: 70px;
+}
