--- a/src/App.css
+++ b/src/App.css
@@ -264,3 +264,68 @@ header .head_text {
   color: white;
   background-color: #fd565f;
 }
+
+/* DiaryPage */
+
+.DiaryPage section {
+  width: 100%;
+  margin-bottom: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-items: center;
+}
+
+.DiaryPage .diary_img_wrapper {
+  background-color: #ececec;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 50px;
+}
+
+.DiaryPage .diary_img_wrapper_1 {
+  background-color: #64c964;
+}
+
+.DiaryPage .diary_img_wrapper_2 {
+  background-color: #9dd772;
+}
+
+.DiaryPage .diary_img_wrapper_3 {
+  background-color: #fdce17;
+}
+
+.DiaryPage .diary_img_wrapper_4 {
+  background-color: #fd8446;
+}
+
+.DiaryPage .diary_img_wrapper_5 {
+  background-color: #fd565f;
+}
+
+.DiaryPage .emotion_description {
+  font-size: 25px;
+  color: #ffffff;
+}
+
+.DiaryPage .diary_content_wrapper {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 5px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+
+.DiaryPage .diary_content_wrapper p {
+  padding: 20px;
+  text-align: left;
+  font-size: 20px;
+}
+
+
+
