Fix style of MyHeader

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ body {
 header {
   padding: 20px 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #e2e2e2;
 }
@@ -83,6 +82,16 @@ header .head_text {
   width: 50%;
   font-size: 25px;
   justify-content: center;
+}
+
+header .head_btn_left {
+  width: 25%;
+  justify-content: start;
+}
+
+header .head_btn_right {
+  width: 25%;
+  justify-content: end;
 }
 
 .DiaryList .menu_wrapper {
